Started adding some style to the site

--- a/src/static/contact.html
+++ b/src/static/contact.html
@@ -68,7 +68,7 @@
 	<![endif]-->
 
 	</head>
-	<body>
+	<body class="inner-page">
 
 		<!-- START #fh5co-header -->
 		<header id="fh5co-header-section" role="header" class="" >
@@ -85,7 +85,7 @@
 
 
 						<ul class="sf-menu" id="fh5co-primary-menu">
-							<li class="active">
+							<li class="">
 								<a href="/">Home</a>
 							</li>
 							<li>
@@ -108,7 +108,7 @@
 								</ul>
 							</li>
 							<li><a href="/elements">Testimonials</a></li>
-							<li class="fh5co-special"><a href="/contact">Get started</a></li>
+							<li class="fh5co-special active"><a href="/contact">Get started</a></li>
 						</ul>
 					</nav>
 				<!-- </div> -->
@@ -124,9 +124,8 @@
 				<div class="col-md-8 col-md-offset-2">
 					<div class="fh5co-hero-wrap">
 						<div class="fh5co-hero-intro">
-							<h1 class="to-animate hero-animate-1">Boost Centre</h1>
-							<h2 class="to-animate hero-animate-2">The cheapest low level boosting online!</a></h2>
-							<p class="to-animate hero-animate-3"><a href="/contact" class="btn btn-outline btn-lg">Get Started</a></p>
+							<h1 class="to-animate hero-animate-1">Contact Us</h1>
+							<h2 class="to-animate hero-animate-2">We'd love to help you!</h2>
 						</div>
 					</div>
 				</div>
@@ -134,142 +133,54 @@
 		</div>
 
 		<div id="fh5co-main">
-
 			<div class="container">
-				<div class="row" id="fh5co-features">
-
-					<div class="col-md-4 col-sm-6 text-center fh5co-feature feature-box">
-						<div class="fh5co-feature-icon">
-							<i class="ti-timer"></i>
-						</div>
-						<h3 class="heading">Speedy</h3>
-						<p>We offer a fast turnaround on whatever you're looking for, we hit our deadlines or your money back!</p>
-					</div>
-					<div class="col-md-4 col-sm-6 text-center fh5co-feature feature-box">
-						<div class="fh5co-feature-icon">
-							<i class="ti-credit-card"></i>
-						</div>
-						<h3 class="heading">Cheap</h3>
-						<p>We offer the cheapest service on the web! Why pay more when you can come here?</p>
-					</div>
-
-					<div class="clearfix visible-sm-block"></div>
-
-					<div class="col-md-4 col-sm-6 text-center fh5co-feature feature-box">
-						<div class="fh5co-feature-icon">
-							<i class="ti-video-camera"></i>
-						</div>
-						<h3 class="heading">Video</h3>
-						<p>We can record or stream all gameplay so you can see what's happening, there's a small fee with this but the choice is entirely yours!</p>
-					</div>
-
-					<div class="clearfix visible-md-block visible-lg-block"></div>
-
-					<div class="col-md-4 col-sm-6 text-center fh5co-feature feature-box">
-						<div class="fh5co-feature-icon">
-							<i class="ti-game"></i>
-						</div>
-						<h3 class="heading">Keep Playing!</h3>
-						<p>Unlike other boosting services we'll provide you with an account you can keep playing on while we're working on yours!</p>
-					</div>
-
-					<div class="clearfix visible-sm-block"></div>
-
-					<div class="col-md-4 col-sm-6 text-center fh5co-feature feature-box">
-						<div class="fh5co-feature-icon">
-							<i class="ti-comment-alt"></i>
-						</div>
-						<h3 class="heading">Communication</h3>
-						<p>Unlike other services that keep you guessing where they are we're always contactable and keep you in the loop at every stage!</p>
-					</div>
-					<div class="col-md-4 col-sm-6 text-center fh5co-feature feature-box">
-						<div class="fh5co-feature-icon">
-							<i class="ti-user"></i>
-						</div>
-						<h3 class="heading">Personal</h3>
-						<p>We work on one account at a time so that we can give you, the customer, our full attention at every stage!</p>
-					</div>
-				</div>
-				<!-- END row -->
-
-				<div class="fh5co-spacer fh5co-spacer-md"></div>
-				<!-- End Spacer -->
-
-				<div class="row" id="fh5co-works">
-					<div class="col-md-8 col-md-offset-2 text-center fh5co-section-heading work-box">
-						<h2 class="fh5co-lead">Accounts We've done in the past</h2>
-						<p class="fh5co-sub">So anyone can just sit here and say they can do all these things but what you want is some hard evidence right? Well here's some accounts we've climbed in the past!</p>
-						<div class="fh5co-spacer fh5co-spacer-sm"></div>
-					</div>
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 col-xs-offset-2 text-center fh5co-work-item work-box">
-						<figure><a href="https://www.overbuff.com/players/pc/Pineapple-21810"><img class="img-responsive" src="images/work_1.jpg" alt="Free HTML5 Template"></a></figure>
-						<p class="fh5co-category">Gold - Platinum in 2 days</p>
-						<h3 class="heading">Pineapple</h3>
-					</div>
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 text-center fh5co-work-item work-box">
-						<figure><a href="https://www.overbuff.com/players/pc/Handsoap-11298"><img class="img-responsive" src="images/work_2.jpg" alt="Free HTML5 Template"></a></figure>
-						<p class="fh5co-category">Silver - High Platinum in 4 days</p>
-						<h3 class="heading">Handsoap</h3>
-					</div>
-
-					<div class="clearfix visible-sm-block visible-xs-block"></div>
-
-					<!-- <div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 text-center fh5co-work-item work-box">
-						<figure><a href="#"><img class="img-responsive" src="images/work_3.jpg" alt="Free HTML5 Template"></a></figure>
-						<p class="fh5co-category">Web Design, Identity, Packaging </p>
-						<h3 class="heading">Work no. 3</h3>
-					</div> -->
-
-					<div class="clearfix visible-md-block visible-lg-block"></div>
-
-					<!-- <div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 text-center fh5co-work-item work-box">
-						<figure><a href="#"><img class="img-responsive" src="images/work_4.jpg" alt="Free HTML5 Template"></a></figure>
-						<p class="fh5co-category">Web Design, Identity, Packaging </p>
-						<h3 class="heading">Work no. 4</h3>
-					</div>
-
-					<div class="clearfix visible-sm-block visible-xs-block"></div>
-
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 text-center fh5co-work-item work-box">
-						<figure><a href="#"><img class="img-responsive" src="images/work_5.jpg" alt="Free HTML5 Template"></a></figure>
-						<p class="fh5co-category">Web Design, Identity, Packaging </p>
-						<h3 class="heading">Work no. 5</h3>
-					</div>
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 text-center fh5co-work-item work-box">
-						<figure><a href="#"><img class="img-responsive" src="images/work_6.jpg" alt="Free HTML5 Template"></a></figure>
-						<p class="fh5co-category">Web Design, Identity, Packaging </p>
-						<h3 class="heading">Work no. 6</h3>
-					</div> -->
-
-					<div class="col-md-4 col-md-offset-4 text-center work-box">
-						<p><a href="/contact" class="btn btn-outline btn-md">Get in Touch!</a></p>
-					</div>
-				</div>
-				<!-- END row -->
-
-				<div class="fh5co-spacer fh5co-spacer-md"></div>
 				<div class="row">
-					<!-- Start Slider Testimonial -->
-	            <h2 class="fh5co-uppercase-heading-sm text-center animate-box">Customer Says...</h2>
-	            <div class="fh5co-spacer fh5co-spacer-xs"></div>
-	            <div class="owl-carousel-fullwidth animate-box">
-	            <div class="item">
-	              <p class="text-center quote">&ldquo;Eventually Testimonials will go here! &rdquo; <cite class="author">&mdash; Michael Coombes</cite></p>
-	            </div>
-	            <div class="item">
-	              <p class="text-center quote">&ldquo;Batman's not a sausage!. &rdquo;<cite class="author">&mdash; Michael Coombes</cite></p>
-	            </div>
-	            <div class="item">
-	              <p class="text-center quote">&ldquo;Can't someone else do it? &rdquo;<cite class="author">&mdash; Homer Simpson</cite></p>
-	            </div>
-	          </div>
-	           <!-- End Slider Testimonial -->
-				</div>
-				<!-- END row -->
-				<div class="fh5co-spacer fh5co-spacer-md"></div>
 
+					<div class="fh5co-spacer fh5co-spacer-sm"></div>
+					<div class="col-md-8">
+						<form action="#" method="post">
+							<div class="col-md-12">
+								<div class="form-group">
+									<label for="name" class="sr-only">Email</label>
+									<input placeholder="Name" id="name" type="text" class="form-control input-lg">
+								</div>
+							</div>
+							<div class="col-md-12">
+								<div class="form-group">
+									<label for="email" class="sr-only">Email</label>
+									<input placeholder="Email" id="email" type="text" class="form-control input-lg">
+								</div>
+							</div>
+
+							<div class="col-md-12">
+								<div class="form-group">
+									<label for="message" class="sr-only">Message</label>
+									<textarea placeholder="Message" id="message" class="form-control input-lg" rows="3"></textarea>
+								</div>
+							</div>
+							<div class="col-md-12">
+								<div class="form-group">
+									<input type="submit" class="btn btn-primary btn-lg " value="Send">
+
+								</div>
+							</div>
+
+
+						</form>
+
+					</div>
+					<div class="col-md-4">
+						<h3>Need Help?</h3>
+						<p>In your message, please put your current SR and what rank you'd like to hit, we'll be back in touch normally in an hour or two with a quote of price and time!</p>
+						<p>
+							<a href="#"></a>
+						</p>
+					</div>
+
+					<div class="fh5co-spacer fh5co-spacer-md"></div>
+
+				</div>
 			</div>
-			<!-- END container -->
 
 
 		</div>
@@ -341,6 +252,7 @@
 		<script src="js/jquery.parallax-scroll.min.js"></script>
 		<!-- Waypoints -->
 		<script src="js/jquery.waypoints.min.js"></script>
+
 		<!-- Main JS -->
 		<script src="js/main.js"></script>
 
